Fix transaction safety, optimize bulk purchase, and add UI features (#2)
* Fix transaction safety and optimize shop logic.

- Refactored `ServerShopMenu` interaction to use strict server-side transaction validation via `ServerShopManager`.
- Fixed a critical exploit where failed slot transactions could award free items.
- Implemented `processBulkPurchase` in `SmallShopBlockEntity` with binary search optimization for efficient bulk buying.
- Added "Clear" button to ServerShop Edit Mode as per specification.
- Ensured consistent slot interaction rules between View and Edit modes.
- Fixed a compilation error in `ServerShopScreen`.

* Fix shift-click purchase issues in both shops.

- SmallShop: Fixed item drops when buying stacks larger than max stack size. Now correctly splits bulk purchases into stack-sized chunks.
- ServerShop: Fixed potential game freeze and infinite loop by removing unsafe `while` loop in `quickMoveStack`.
- Implemented robust `calculateMaxFitInPlayerInventory` helper that respects item max stack sizes.
- Implemented transactional "bulk buy" logic for ServerShop that calculates affordable limits and executes atomically.
- Updated `processBulkPurchase` in `SmallShopBlockEntity` to use binary search for better performance.
- Fixed exploit where failed transactions could give free items in ServerShop.

* Fix critical ServerShop bugs and implement missing UI specs.

- Fixed ServerShop item loss bug on GUI close by relying on `Inventory.placeItemBackInInventory`'s native drop logic.
- Implemented dynamic payment item ordering in ServerShop previews and list buttons (Slot 2 items shift to Slot 1 position if Slot 1 is empty).
- Fixed ServerShop Edit-Mode preview desync by ensuring preview updates immediately for any slot change.
- Ensured ServerShop scrollbar is always visible (track and disabled handle when inactive).
- Added item tooltips to ServerShop offer list buttons.
- Fixed SmallShop and ServerShop shift-click purchase logic to prevent item drops 